# cosmic-tiling-exceptions

./: Cargo.toml  Makefile  README.md
i18n/en/: cosmic_tiling_exceptions.ftl
i18n/pl/: cosmic_tiling_exceptions.ftl
res/: dev_heppen_tiling_exception_custom.desktop
src/: app.rs  main.rs
src/wayland/: mod.rs  toplevel.rs
